# pii-anonymizer

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.standalone  LICENSE  QWEN.md  README.md  docker-compose.yml  mkdocs.yml  requirements.txt
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
.qwen/: settings.json
benchmarks/: benchmark_pii_anonymizer.rs  benchmark_presidio.py  run_benchmarks.sh
benchmarks/results/: README.md
benchmarks/scripts/: presidio_server.sh
config/: settings.yaml  test-settings.yaml
debian/: pii-anonymizer.service  postinst  prerm
docs/: README_ru.md  benchmarks.md  configuration.md  custom-patterns_ru.md  deployment.md  integrations_ru.md  mcp-proxy.md  mcp-server_ru.md  patterns.md  rest-api.md  strategies.md
docs/en/: README.md  ci-cd.md  comparison.md  configuration.md  custom-patterns.md  deployment.md  index.md  integrations.md  mcp-server.md  quick-start.md  rest-api.md  strategies.md
docs/ru/: README.md  benchmarks.md  ci-cd.md  ci-cd_ru.md  comparison_ru.md  deployment.md  index.md  mcp-proxy_ru.md  patterns_ru.md  quick-start.md
docs/stylesheets/: extra.css
examples/: README.md  demo_strategies.py  sample_texts.json  sample_texts.md  test_strategies.sh
examples/anythingllm/: README.md  docker-compose.yml  mcp_servers.json
examples/anythingllm-github/: .env.example  README.md  docker-compose.yml
examples/anythingllm-searxng/: .env.example  README.md  docker-compose.yml  mcp_servers.json  searxng-settings.yml
src/: lib.rs  main.rs
tests/: api_integration_test.rs
(+26 files in other folders)
