[package]
name = "pii-anonymizer"
version = "0.1.0"
edition = "2021"
description = "MCP Server for PII anonymization in search queries"
authors = ["Aleks Kolesnikov"]

[[bin]]
name = "pii-anonymizer"
path = "src/main.rs"

[[bin]]
name = "benchmark_pii_anonymizer"
path = "benchmarks/benchmark_pii_anonymizer.rs"

[lib]
name = "pii_anonymizer"
path = "src/lib.rs"

[dependencies]
# HTTP сервер
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# MCP протокол (заглушка для MVP, позже заменим на rmcp)
serde = "1.0"
serde_json = "1.0"

# Конфигурация
config = "0.14"
dotenvy = "0.15"

# Логирование
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Валидация
validator = { version = "0.18", features = ["derive"] }

# Утилиты
regex = "1.10"
lazy_static = "1.4"
uuid = { version = "1.7", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
tokio-stream = "0.1"
utoipa = { version = "4.2", features = ["axum_extras"] }
thiserror = "1.0"
async-trait = "0.1"
rmcp = { version = "0.1", features = ["server", "client", "transport-sse-server", "transport-io"] }
clap = { version = "4.4", features = ["derive"] }
schemars = "0.8"
tokio-util = "0.7.18"
async-stream = "0.3"

[dev-dependencies]
tokio-test = "0.4"
axum-test = "14.0"
